--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.9"
+  },
+  "devDependencies": {
+    "sass": "^1.61.0"
   }
 }
