--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "next": "13.3.0",
     "next-images": "^1.8.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "sass": "^1.61.0"
